# fastapi-pagination-example

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/models/: example.py
src/modules/db/: engine.py  pagination.py
src/routes/: __init__.py
src/routes/example/: example_router.py  example_service.py
src/settings/: __init__.py
src/types/: example.py  pagination.py  validators.py
